ES Translation, Soul Import

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3884,7 +3884,7 @@
       </notes>
       <segment>
         <source>In der Vergangenheit importierte Seelenpunkte, Auszeichnungen und Heldenerfahrung von dieser Seele sind deinem MyHordes-Profil gutgeschrieben worden. Neu hinzu gekommene Seelenpunkte, Auszeichnungen und Heldenerfahrung werden jedoch nur in einem gesonderten Bereich deiner Seele angezeigt.</source>
-        <target>In der Vergangenheit importierte Seelenpunkte, Auszeichnungen und Heldenerfahrung von dieser Seele sind deinem MyHordes-Profil gutgeschrieben worden. Neu hinzu gekommene Seelenpunkte, Auszeichnungen und Heldenerfahrung werden jedoch nur in einem gesonderten Bereich deiner Seele angezeigt.</target>
+        <target>Los puntos de alma, los premios y los dias de héroe importados de esta alma en el pasado se han acreditado en su perfil de MyHordes. Sin embargo, los puntos de alma, los premios y los dias de héroe recién agregados solo se muestran en un área separada de su alma.</target>
       </segment>
     </unit>
     <unit id="l.Sx3SK">
@@ -3895,7 +3895,7 @@
       </notes>
       <segment>
         <source>Hiermit markierst du die Seele, mit der du dich am meisten identifizierst. Es kann nur eine importierte Seele zur Hauptseele erklärt werden. Überlege dir deine Entscheidung gut, denn du kannst die Wahl deiner Hauptseele später nicht mehr ändern!</source>
-        <target>Hiermit markierst du die Seele, mit der du dich am meisten identifizierst. Es kann nur eine importierte Seele zur Hauptseele erklärt werden. Überlege dir deine Entscheidung gut, denn du kannst die Wahl deiner Hauptseele später nicht mehr ändern!</target>
+        <target>Con esto marcas el alma con la que más te identificas. Solo un alma importada puede declararse el alma principal. Piense cuidadosamente en su decisión, ¡porque no podrá cambiar la elección de su alma principal más adelante!</target>
       </segment>
     </unit>
     <unit id="9htmE0T">
@@ -3906,7 +3906,7 @@
       </notes>
       <segment>
         <source>Da du bereits Punkte auf MyHordes gesammelt hast, kannst du nicht länger Seelenpunkte, Auszeichnungen und Heldenerfahrung von einer importierten Seele übernehmen.</source>
-        <target>Da du bereits Punkte auf MyHordes gesammelt hast, kannst du nicht länger Seelenpunkte, Auszeichnungen und Heldenerfahrung von einer importierten Seele übernehmen.</target>
+        <target>Como ya ha ganado puntos en MyHordes, ya no puede obtener puntos de alma, premios y experiencia de héroe de un alma importada.</target>
       </segment>
     </unit>
     <unit id="qDPKzOI" name="Achtung, der Seelenimport unterliegt aktuell zusätzlichen Einschränkungen.">
@@ -3917,7 +3917,7 @@
       </notes>
       <segment>
         <source>Achtung, der Seelenimport unterliegt aktuell zusätzlichen Einschränkungen.</source>
-        <target>Achtung, der Seelenimport unterliegt aktuell zusätzlichen Einschränkungen.</target>
+        <target>Atención, la importación de almas está sujeta actualmente a restricciones adicionales.</target>
       </segment>
     </unit>
     <unit id="UfAt_R8">
@@ -3928,7 +3928,7 @@
       </notes>
       <segment>
         <source>Um zu verhindern, dass Spieler Auszeichnungen, Seelenpunkte oder Heldenerfahrung farmen, indem sie gleichzeitig auf MyHordes und Hordes (oder einer lokalen Variante von Hordes) spielen, werden &lt;b&gt;neu gesammelte Auszeichnungen, SP oder Heldenerfahrung&lt;/b&gt; nicht länger zu deiner MH-Seele hinzugerechnet.</source>
-        <target><![CDATA[Um zu verhindern, dass Spieler Auszeichnungen, Seelenpunkte oder Heldenerfahrung farmen, indem sie gleichzeitig auf MyHordes und Hordes (oder einer lokalen Variante von Hordes) spielen, werden <b>neu gesammelte Auszeichnungen, SP oder Heldenerfahrung</b> nicht länger zu deiner MH-Seele hinzugerechnet.]]></target>
+        <target><![CDATA[Para evitar que los jugadores acumulen logros, puntos de alma o dias de héroe jugando en MyHordes y Hordes (o una variante local de Hordes) al mismo tiempo, los <b>logros, puntos de alma o dias de héroe recién recolectados</b> ya no cuenta para tu alma MH.]]></target>
       </segment>
     </unit>
     <unit id="33LWSL0">
@@ -3939,7 +3939,7 @@
       </notes>
       <segment>
         <source>Diese Einschränkung betrifft alle Spieler, die auf MyHordes bereits &lt;b&gt;mehr als {threshold} Seelenpunkte&lt;/b&gt; gesammelt haben.</source>
-        <target><![CDATA[Diese Einschränkung betrifft alle Spieler, die auf MyHordes bereits <b>mehr als {threshold} Seelenpunkte</b> gesammelt haben.]]></target>
+        <target><![CDATA[Esta restricción afecta a todos los jugadores que ya han acumulado <b>más de {threshold} puntos de alma</b> en MyHordes.]]></target>
       </segment>
     </unit>
     <unit id="YKpGK6P">
@@ -3950,7 +3950,7 @@
       </notes>
       <segment>
         <source>Es werden nach wie vor alle Informationen aus deiner importierten Seele auf MyHordes gespeichert. Durch den Import &lt;b&gt;neu&lt;/b&gt; gewonnene Auszeichnungen, SP oder Heldenerfahrung wird jedoch &lt;b&gt;nur noch in einem gesonderten Bereich&lt;/b&gt; auf deiner MH-Seele angezeigt.</source>
-        <target><![CDATA[Es werden nach wie vor alle Informationen aus deiner importierten Seele auf MyHordes gespeichert. Durch den Import <b>neu</b> gewonnene Auszeichnungen, SP oder Heldenerfahrung wird jedoch <b>nur noch in einem gesonderten Bereich</b> auf deiner MH-Seele angezeigt.]]></target>
+        <target><![CDATA[Toda la información de su alma importada todavía se guarda en MyHordes. Sin embargo, los premios, puntos de alma o dias de héroe obtenidos a través de la importación <b>nuevo</b>, <b>solo se mostrarán en un área separada</b> de su alma MH.]]></target>
       </segment>
     </unit>
     <unit id="FgytNDj" name="Du kannst deine Seele aktuell &lt;b&gt;ohne Einschränkungen&lt;/b&gt; importieren.">
@@ -3961,7 +3961,7 @@
       </notes>
       <segment>
         <source>Du kannst deine Seele aktuell &lt;b&gt;ohne Einschränkungen&lt;/b&gt; importieren.</source>
-        <target><![CDATA[Du kannst deine Seele aktuell <b>ohne Einschränkungen</b> importieren.]]></target>
+        <target><![CDATA[Actualmente puedes importar tu alma <b>sin restricciones</b>.]]></target>
       </segment>
     </unit>
     <unit id="UeSGb7T" name="Importierte Seelen">
@@ -3972,7 +3972,7 @@
       </notes>
       <segment>
         <source>Importierte Seelen</source>
-        <target>Importierte Seelen</target>
+        <target>Almas importadas</target>
       </segment>
     </unit>
     <unit id="7fBaUak">
@@ -3983,7 +3983,7 @@
       </notes>
       <segment>
         <source>&lt;b&gt;Wenn du sie in der Vergangenheit importiert hast&lt;/b&gt;, kannst du sie dir hier ansehen!</source>
-        <target><![CDATA[<b>Wenn du sie in der Vergangenheit importiert hast</b>, kannst du sie dir hier ansehen!]]></target>
+        <target><![CDATA[<b>Si los ha importado en el pasado</b>, ¡compruébelos aquí!]]></target>
       </segment>
     </unit>
     <unit id="d1k9Xlg">
@@ -3994,7 +3994,7 @@
       </notes>
       <segment>
         <source>Die maximale Größe der Bilddatei, die du für deinen Avatar hochladen kannst, beträgt &lt;b&gt;{size}&lt;/b&gt;.</source>
-        <target><![CDATA[Die maximale Größe der Bilddatei, die du für deinen Avatar hochladen kannst, beträgt <b>{size}</b>.]]></target>
+        <target><![CDATA[El tamaño máximo del archivo de imagen que puede cargar para su avatar es <b>{size}</b>.]]></target>
       </segment>
     </unit>
     <unit id="U8MXhPw">
@@ -4005,7 +4005,7 @@
       </notes>
       <segment>
         <source>Nach dem Upload wird der Server dein Bild möglicherweise komprimieren (z.B. indem die Größe reduziert oder Animationsframe optimiert werden).</source>
-        <target>Nach dem Upload wird der Server dein Bild möglicherweise komprimieren (z.B. indem die Größe reduziert oder Animationsframe optimiert werden).</target>
+        <target>Después de la carga, el servidor puede comprimir su imagen (por ejemplo, reduciendo el tamaño u optimizando los cuadros de animación).</target>
       </segment>
     </unit>
     <unit id="iExo5YI">
@@ -4016,7 +4016,7 @@
       </notes>
       <segment>
         <source>Der Server muss in der Lage sein, dein Bild auf höchstens &lt;b&gt;{size}&lt;/b&gt; zu komprimieren - andernfalls kann es nicht gespeichert werden.</source>
-        <target><![CDATA[Der Server muss in der Lage sein, dein Bild auf höchstens <b>{size}</b> zu komprimieren - andernfalls kann es nicht gespeichert werden.]]></target>
+        <target><![CDATA[El servidor debe poder comprimir su imagen a un máximo de <b>{tamaño}</b>; de lo contrario, no se puede guardar.]]></target>
       </segment>
     </unit>
     <unit id="LCJ4eBk" name="Die folgenden Bildformate werden unterstützt:">
@@ -4027,7 +4027,7 @@
       </notes>
       <segment>
         <source>Die folgenden Bildformate werden unterstützt:</source>
-        <target>Die folgenden Bildformate werden unterstützt:</target>
+        <target>Se admiten los siguientes formatos de imagen:</target>
       </segment>
     </unit>
     <unit id="KDrgSO8" name="nur Baseline-Format">
@@ -4038,7 +4038,7 @@
       </notes>
       <segment>
         <source>nur Baseline-Format</source>
-        <target>nur Baseline-Format</target>
+        <target>Solo formato de línea de base</target>
       </segment>
     </unit>
   </file>
