--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -15795,7 +15795,7 @@
       </notes>
       <segment>
         <source>Die Bürger dieser Stadt haben die unten aufgeführten Berufe gewählt.</source>
-        <target>Les citoyens de cette ville ont déjà choisi les métiers suivant.</target>
+        <target>Les citoyens de cette ville ont déjà choisi les métiers suivants.</target>
       </segment>
     </unit>
     <unit id="gkceIWw">
