ES Translation fix for chamanic potion

--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -8603,7 +8603,7 @@
       </notes>
       <segment>
         <source>Das ist ein Musterbeispiel eines schamanischen Tranks! Nun liegt es an die, der Stadt dessen Wirksamkeit zu vermitteln und sie von deinen schamanischen Fähigkeiten zu überzeugen.</source>
-        <target>Has fabricado un excelente ejemplar de la Poción Chamánica! Ahora depende de ti transmitir su efectividad con el pueblo y convencerlos de tus habilidades chamánicas.</target>
+        <target>¡Ha funcionado! Una perfecta poción chamánica. Ahora es momento de compartirla con el pueblo y ver sus místicos poderes.</target>
       </segment>
     </unit>
     <unit id="1VR4tvz" name="Du musst etwas Wasser zum Umwandeln haben, um den Trank vorzubereiten.">
