--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -21042,8 +21042,7 @@
       </notes>
       <segment>
         <source>Bürger, die aus einer Stadt verbannt wurden, haben das Recht, den weggeworfenen Müll der Stadt nach Gegenständen zu durchsuchen, die für sie nützlich sein könnten...</source>
-        <target>Los jugadores desterrados de un pueblo pueden hurgar en la basura tirada por los habitantes del pueblo en busca de objetos que les puedan ser útiles.
-</target>
+        <target>Los jugadores desterrados de un pueblo pueden hurgar en la basura tirada por los habitantes del pueblo en busca de objetos que les puedan ser útiles.</target>
       </segment>
     </unit>
     <unit id="b1ihlan">
